feat: add section figure in index.html/style for it/add .editorconfig

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <main class="main-content">
 
         <div class="left-container">
+            <figure class="My Photo">
+                <img src="MyPhoto.jpg" alt="Here my photo">
+                <figcaption>Juliya Potapchuk</figcaption>
+            </figure><hr>
         </div>
 
         <div class="right-container">
