--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
                 <img src="MyPhoto.jpg" alt="Here my photo">
                 <figcaption>Juliya Potapchuk</figcaption>
             </figure><hr>
+
+            <section>
+                <h2>Skills:</h2>
+                <ul class="slills-ul">
+                    <li>html</li>
+                    <li>css</li>
+                    <li>js</li>
+                </ul>
+            </section><hr>
+            
         </div>
 
         <div class="right-container">
