--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Summary</title>
     <link rel="stylesheet" href="style.css">
-    
+    <link rel="stylesheet" href="https://use.fontawesome.com/4fa8879ffc.css">
 </head>
 
 <body>
