feat: add section education in index.html

--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
                 <p>I can work in a team, go deep into details, find necessary information myself.</p>
             </section><hr>
     
+            <section>
+                <h2>Education</h2>
+                <p>I have read different articles about JS and basic data structures. Also I have completed online courses ”CS50”, ”HTML Academy” and can use the Codewars platform. Recently I read online manual “The Modern JavaScript Tutorial”.</p>
+            </section><hr>
                     
         </div>
 
