feat: add section english in index.html

--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
                 <p>I have read different articles about JS and basic data structures. Also I have completed online courses ”CS50”, ”HTML Academy” and can use the Codewars platform. Recently I read online manual “The Modern JavaScript Tutorial”.</p>
             </section><hr>
                     
+            <section>
+                <h2>English </h2>
+                <p>I learned English at school and university. Moreover, I took English lessons from tutor in this year.</p>
+            </section>    
         </div>
 
         <div class="clearfix">
