fix: remove .cont-info-ul/add .style-lin-heig

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <figcaption>Juliya Potapchuk</figcaption>
             </figure><hr>
 
-            <section>
+            <section class="style-lin-heig">
                 <h2>Skills:</h2>
                 <ul class="slills-ul">
                     <li>html</li>
@@ -48,7 +48,7 @@
                 </ul>
             </section><hr>
 
-            <aside>
+            <aside class="style-lin-heig">
                 <h2 class="header-contact">Contact Info:</h2>
                 <div>
                     <i class="fa fa-envelope-o" aria-hidden="true"></i>
